--- a/Games/Global/Global.vcxproj.filters
+++ b/Games/Global/Global.vcxproj.filters
@@ -4,8 +4,10 @@
     <ClInclude Include="Source\extypes.h" />
     <ClInclude Include="Source\extypes.matrix3x2.h" />
     <ClInclude Include="Source\extypes.matrix4x4.h" />
-    <ClInclude Include="Source\extypes.queue.h" />
     <ClInclude Include="Source\extypes.vectors.h" />
     <ClInclude Include="Source\extypes.vectors.math.h" />
+    <ClInclude Include="Source\StaticCyclicQueue.h" />
+    <ClInclude Include="Source\StaticList.h" />
+    <ClInclude Include="Source\BitField.h" />
   </ItemGroup>
 </Project>
