added hell, fixed collisions

--- a/Games/Balls/Balls.vcxproj
+++ b/Games/Balls/Balls.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="Source\Field.cpp" />
     <ClCompile Include="Source\Game.cpp" />
     <ClCompile Include="Source\GameObjects.cpp" />
+    <ClCompile Include="Source\Hell.cpp" />
     <ClCompile Include="Source\Random.cpp" />
     <ClCompile Include="Source\Window.cpp" />
   </ItemGroup>
