--- a/Games/Balls/Balls.vcxproj.filters
+++ b/Games/Balls/Balls.vcxproj.filters
@@ -8,9 +8,11 @@
     <ClCompile Include="Source\Game.cpp" />
     <ClCompile Include="Source\Random.cpp" />
     <ClCompile Include="Source\Hell.cpp" />
+    <ClCompile Include="Source\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\BallsGame.h" />
     <ClInclude Include="Source\Random.h" />
+    <ClInclude Include="Source\Timer.h" />
   </ItemGroup>
 </Project>
